// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - SurveyField renders correctly 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    className="sc-ifAKCX jvIdsK"
  >
     
    <div
      className="FormField__FormFieldBox-m9hood-0 igkoAa StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <label
        className="StyledText-sc-1sadyjn-0 bMXxti"
      >
        Question content
      </label>
      <div
        className="StyledBox-sc-13pk1d4-0 gZSidW"
      />
    </div>
  </div>
</div>
`;

exports[`COMPONENT - SurveyField renders correctly long input field 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    className="sc-ifAKCX jvIdsK"
  >
     
    <div
      className="FormField__FormFieldBox-m9hood-0 igkoAa StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <label
        className="StyledText-sc-1sadyjn-0 bMXxti"
      >
        Question content
      </label>
      <div
        className="StyledBox-sc-13pk1d4-0 gZSidW"
      />
    </div>
  </div>
</div>
`;

exports[`COMPONENT - SurveyField renders correctly rating field 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    className="sc-ifAKCX jvIdsK"
  >
     
    <div
      className="sc-bxivhb VjjFY FormField__FormFieldBox-m9hood-0 igkoAa StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <label
        className="StyledText-sc-1sadyjn-0 bMXxti"
      >
        Question content
      </label>
      <div
        className="StyledBox-sc-13pk1d4-0 gZSidW"
      />
    </div>
  </div>
</div>
`;

exports[`COMPONENT - SurveyField renders correctly select field 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    className="sc-ifAKCX jvIdsK"
  >
     
    <div
      className="FormField__FormFieldBox-m9hood-0 igkoAa StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <label
        className="StyledText-sc-1sadyjn-0 bMXxti"
      >
        Question content
      </label>
      <div
        className="StyledBox-sc-13pk1d4-0 gZSidW"
      />
    </div>
  </div>
</div>
`;

exports[`COMPONENT - SurveyField renders correctly with required field 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    className="sc-ifAKCX jvIdsK"
  >
    <span
      data-type="required-field"
    >
      *
    </span>
     
    <div
      className="FormField__FormFieldBox-m9hood-0 igkoAa StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <label
        className="StyledText-sc-1sadyjn-0 bMXxti"
      >
        Question content
      </label>
      <div
        className="StyledBox-sc-13pk1d4-0 gZSidW"
      />
    </div>
  </div>
</div>
`;

exports[`COMPONENT - SurveyField renders correctly yes-no field 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <div
    className="sc-ifAKCX jvIdsK"
  >
     
    <div
      className="sc-bxivhb VjjFY FormField__FormFieldBox-m9hood-0 igkoAa StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <label
        className="StyledText-sc-1sadyjn-0 bMXxti"
      >
        Question content
      </label>
      <div
        className="StyledBox-sc-13pk1d4-0 gZSidW"
      />
    </div>
  </div>
</div>
`;
